# Airbnb_Project

./: README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: explore_data.ipynb
reports/: Airbnb Explorer-1715585843478.json
src/data/: onboard_airbnb_data.py  sql_manager.py
tests/data/: sql_manager_test.py
