[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airbnb-lib"
version = "2024.0.0"

dependencies = [
  "Sphinx",
  "pandas",
  "black",
  "isort",
  "python-dotenv>=0.5.1",
  "psycopg2",
  "unittest",
]

requires-python = ">= 3.10"

authors = [
  {name = "Manuel Vazquez"},
]
maintainers = [
  {name = "Manuel Vazquez"}
]

description = "Analysis of Airbnb data using Python, PostgresQL, Grafana and Tensorflow."

readme = "README.md"

license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/mrvgME/Airbnb_Project"
